--- a/gb/24/4/22/n14231453.md
+++ b/gb/24/4/22/n14231453.md
@@ -1,44 +1,44 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>大卫?麦塔斯：赞赏、表彰高智晟</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/12/id13882086-DSC_0442-600x400.jpg" />
-<h6>大卫?麦塔斯从未与高智晟会过面，但从个人的经验中知道，他是一位英雄，公认的称职的律师。图：曾获诺贝尔和平奖提名的国际著名人权律师大卫·麦塔斯（David Matas）作为特邀嘉宾在集会上发言。（柏川／大纪元）
+<h6>大卫?麦塔斯从未与高智晟会过面，但从个人的经验中知道，他是一位英雄，公认的称职的律师。图：曾获诺贝尔和平奖提名的国际著名人权律师大卫?麦塔斯（David Matas）作为特邀嘉宾在集会上发言。（柏川／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2024年04月22日讯】译者按：4月20日是高智晟的生日，他于2017年8月13日再次被失踪，至今杳无音讯。麦塔斯先生在2007年给高智晟颁奖会上的致辞（注：1），今天仍然有着鲜活的现实意义。经他允许，翻译成中文，以飨读者。</p>
-<p>原作者按：2007年6月30日于加利福尼亚州圣塔芭芭拉举行的全美庭审辩护协会董事会（the American Boardof Trial Advocates Directors，ABOTA）会议上关于颁发“勇敢倡议者奖（the Courageous Advocacy Award）”给高智晟时的发言修订稿，2023年3月12日。）</p>
-<p>我从未与高智晟会过面，从未与他透过电话、也从未透过电子邮件或信件与他交流过。但我从个人的经验中知道，他是一位英雄，公认的称职是律师。</p>
+	<p>【大纪元2024年04月22日讯】译者按：4月20日是高智晟的生日，他于2017年8月13日再次被失踪，至今杳无音讯。麦塔斯先生在2007年给高智晟颁奖会上的致辞（注1），今天仍然有着鲜活的现实意义。经他允许，翻译成中文，以飨读者。</p>
+<p><em>原作者按：2007年6月30日于加利福尼亚州圣塔芭芭拉举行的全美庭审辩护协会董事会（the American Boardof Trial Advocates Directors，ABOTA）会议上关于颁发“勇敢倡议者奖”（Courageous Advocacy Award）给高智晟时的发言修订稿，2023年3月12日。</em></p>
+<p>我从未与高智晟会过面，从未与他透过电话、也从未透过电子邮件或信件与他交流过。但我从个人的经验中知道，他是一位英雄，公认的称职的律师。</p>
 <h2>下面是我个人与高智晟之间的关联。</h2>
-<p>2006年5月，非政府组织“调查迫害法轮功联盟（the Coalition to Investigate Persecution against the Falun Gong）”请我和大卫?乔高（David Kilgour）作为独立专家对中国强摘法轮功修炼者的器官的一系列指控进行调查并撰写报告。指控认为，法轮功修炼者被杀害以获得器官，尸体被火化，他们的器官被移植给来自世界各地的支付巨款的客户。大卫·乔高是加拿大政府前官员、前亚太部长。</p>
-<p>当然，为了作这项调查，我们要去中国。因为我是加拿大的移民律师，所以我知道当申请附有签证国的某个人的邀请信时，更有可能获得签证。我们四处征求来自中国的邀请信来做这项工作。回应我们的人是高智晟。</p>
+<p>2006年5月，非政府组织“法轮功受迫害真相联合调查团”（Coalition to Investigate Persecution against the Falun Gong）请我和大卫?乔高（David Kilgour）作为独立专家对中国活摘法轮功修炼者的器官的一系列指控进行调查并撰写报告。指控认为，法轮功修炼者被杀害以获得器官，尸体被火化，他们的器官被移植给来自世界各地的支付巨款的客户。大卫?乔高是加拿大政府前官员、前亚太部长。</p>
+<p>当然，为了做这项调查，我们要去中国。因为我是加拿大的移民律师，所以我知道当申请附有签证国的某个人的邀请信时，更有可能获得签证。我们四处征求来自中国的邀请信来做这项工作。回应我们的人是高智晟。</p>
 <p>大卫?乔高和我请求与中国（中共）驻加大使馆面谈，讨论入境的条件。我们的请求被接受了。但会见大卫?乔高的人只是否认上面的指控，而对我们的旅行不予理睬。所以我们一直就没有正式地申请签证，也没有向中国（中共）大使馆提交高先生的邀请函。</p>
 <p>此后不久，高先生于8月15日被逮捕、遭受酷刑，并以所谓的“煽动颠覆罪”被起诉，12月12日被定罪，并于12月22日被判处有期徒刑三年、缓刑五年。虽然缓刑，但他仍被软禁至今（译者注：在作者发言的时候）。大卫?乔高和我忍不住要关注他。到底发生了什么事？</p>
-<p>高先生从难以想像的最劣势的环境成长为一名成功的民间律师。他出生在窑洞里。他的父母无力供他上学；所以他站在教室的窗外听课。然而，在2001年，中国（中共）司法部将高先生评为中国十佳律师之一。他曾为许许多多处境困难的客户进行辩护，例如，煤矿工人起诉他们的雇主，还有一位客户要求（政府）赔偿因为当局准备2008年奥运会而被没收的房屋。</p>
-<p>他其中的三位客户是杨茂东、郑贻春和蔡卓华牧师。杨先生因向广东（番禺）太石村村民们提供法律咨询而被拘留，而村民们试图以腐败为由罢免村主任。郑先生是记者、前教授，因在网站上发表言论而被判处七年徒刑。蔡卓华牧师因印刷、出售圣经等被判入狱三年。</p>
+<p>高先生从难以想像的最劣势的环境中成长为一名成功的民间律师。他出生在窑洞里。他的父母无力供他上学；所以他站在教室的窗外听课。然而，在2001年，中国（中共）司法部将高先生评为中国十佳律师之一。他曾为许许多多处境困难的客户进行辩护，例如，煤矿工人起诉他们的雇主，还有一位客户要求（政府）赔偿因为当局准备2008年奥运会而被没收的房屋。</p>
+<p>他其中的三位客户是杨茂东、郑贻春和蔡卓华牧师。杨先生因向广东（番禺）太石村村民们提供法律咨询而被拘留，而村民们试图以腐败为由罢免村主任。郑先生是记者、前教授，因在网站上发表言论而被判处七年徒刑。蔡卓华牧师因印刷、出售《圣经》等被判入狱三年。</p>
 <p>只要高先生不碰法轮功，他就可以安全地代理此类案件。正是他对（政府）迫害法轮功的抗议最终给他自己带来了麻烦。</p>
 <p>然而，这一事实提出了一个更深的问题。为什么高先生为法轮功受害者辩护要比代理其他客户有更大的危险？为什么中共政府认为替法轮功挺身而出比为基督徒辩护更坏？</p>
-<p>我猜在座的很多人都不知道什么是法轮功。但知道了它是什么也不能回答我上面的问题。</p>
+<p>我猜在座的很多人都不知道什么是法轮功。但知道了他是什么也不能回答我上面的问题。</p>
 <p>法轮功是中国的古老传统修炼功法。气功是一种锻炼方法，其中太极拳在西方最知名。法轮功的核心教义是尊重“真、善、忍”的原则。法轮功没有政治意图或政治纲领。它倡导和实践非暴力，甚至在自卫中也是如此。比起其他团体，中共政府更卖力地追捕一群除了健身和打坐冥想之外什么也不做的无辜的修炼者，这到底是为了什么？</p>
 <p>如同所有的受害事件一样，问题在肇事者，而不是受害者。举例来说，检视犹太人对我们理解反犹太主义毫无帮助，我们必须要检视反犹太主义者。了解法轮功受迫害的情况并不需要学习法轮功；但这确实需要对中国共产党有所了解。</p>
-<p>1992年法轮功传世，正值铁幕（the Iron Curtain，译者注：指东欧共产主义阵营与欧洲自由国家之间的分隔）落下和苏联解体之际，其创始人李洪志先生著书立说，掀起了当今的法轮功运动。根据1999年中共政府的估计，当时法轮功有七千万信众，多于中共六千万左右的党员人数。</p>
+<p>1992年法轮功传世，正值铁幕（Iron Curtain，译者注：指东欧共产主义阵营与欧洲自由国家之间的分隔）落下和苏联解体之际，其创始人李洪志先生&#33879;书立说，掀起了当今的法轮功运动。根据1999年中共政府的估计，当时法轮功有七千万信众，多于中共六千万左右的党员人数。</p>
 <p>在中国，对任何非共产主义信仰体系拥有如此多的信众都不可能视若无睹。中共党员开始了对法轮功的批评，起初是在中共的底层。但这种意识形态上的冲突最终抵达最高层。当时的中共国家主席江泽民对法轮功的壮大感到震惊。在他看来，共产党意识形态的霸主地位受到了威胁。1999年7月，他下令中共取缔法轮功。</p>
 <p>在一个层面上，中共镇压法轮功似乎纯粹是极权主义的疯狂，是凭空制造了一个敌人。共产党需要敌人来巩固它的政权，而法轮功恰恰不幸成了它的敌人。</p>
 <p>在共产主义政权看来，没有一个敌人会很糟。因为，当没有人可以被妖魔化的话，共产党就无法证明自己掌权的合法性。</p>
-<p>毫无疑问，在极权主义体系内部，这种疯狂是存在的。但是，还有另一个层面，即中国特色的层面。法轮功是中国古老传统的产物，这些传统有了现代的形态。用黑格尔或马克思主义的话来说，它们是中国历史辩证法的现阶段。它们代表的是真实的中国、基层的中国、人民的中国。</p>
+<p>毫无疑问，在极权主义体系内部，这种疯狂是存在的。但是，还有另一个层面，即中国特色的层面。法轮功是中国古老传统的产物，这些传统有了现代的形态。用黑格尔或马克思主义的话来说，他们是中国历史辩证法的现阶段。他们代表的是真实的中国、基层的中国、人民的中国。</p>
 <p>法轮功出现在1992年绝不是一个巧合，因为当时全球对共产主义任何的信念正在终结之中。用什么来填补共产主义在全球崩溃后所留下的意识形态空白呢？在中国，答案就是法轮功。</p>
 <p>中共认为，法轮功是一个退步，一个巨大的倒退，回到了共产党掌权之前的中国。法轮功的成功就意味着，除了共产党留下的创伤之外，中国还是以前的中国，好像从未有过中共一样。</p>
 <p>共产党人的难题是，法轮功是地地道道来自中国，而共产主义显然是外来的。共产主义就是侵入中国的西方意识形态。共产党人看到了，一种广泛流行的源于中国自身的意识形态正在切断他们立足的根基。</p>
 <p>容许法轮功的存在，至少在短期内并不意味着现政权的崩溃。但这将意味着共产党在中国人民心目中存留的任何意识形态都会消失。一旦连共产党内部都没有一个人相信共产主义了，共产党对权力的失控就不远了。这似乎就是中共要残暴镇压的原因，这种镇压没有底线，比对任何其他群体的镇压都要严重得多。</p>
 <p>从中共对法轮功的辱骂就可以看出它在意识形态上的恐惧。曾经针对资本家、资产阶级和剥削阶级的全部仇恨现在用来针对法轮功，诬蔑法轮功是X教，是被洗脑来杀害自己和他人。</p>
 <p>如人所料，一个遭受如此极端诋毁的群体，其受害的程度是很可怕的，远远超过了任何其他群体。（中共）首先是煽动仇恨。然后是非人格化、边缘化和非人性化。最后是酷刑与杀戮。</p>
-<p>联合国酷刑问题特别报告员（the UN Special Rapporteur on Torture）2006年3月的报告表明，在中国遭受酷刑和虐待的受害者中，66%是法轮功修炼者。其次是维吾尔人，占11%。其余的群体都在10%以下。截至2006年12月22日，大卫?乔高和我确认了超过3,000名因迫害而死亡的有名有姓的法轮功修炼者。</p>
+<p>联合国酷刑问题特别报告员（UN Special Rapporteur on Torture）2006年3月的报告表明，在中国遭受酷刑和虐待的受害者中，66%是法轮功修炼者。其次是维吾尔人，占11%。其余的群体都在10%以下。截至2006年12月22日，大卫?乔高和我确认了超过3,000名因迫害而死亡的有名有姓的法轮功修炼者。</p>
 <p>是高先生自己走进了这个漩涡。在2004年12月、2005年10月与2005年12月，他写了三封抗议迫害法轮功的公开信。</p>
 <p>第二封信发出之后，北京市司法局暂停了他的律师事务所营业一年。12月，吊销了他的律师执照。</p>
 <p>高先生对（当局的）这种行为的回应是公开退党（译者注：宣布与妻子耿和一起退出）并写了他的第三封信。第三封信发出后，他接到了警方的电话。警方通知，他已经越过红线，给自己带来了麻烦。警方称，他、他的妻子和孩子都在被调查。从12月开始，他和家人一直受到警方监视。</p>
-<p>2006年1月，在他发现警察拍摄他之后，他也拍摄了警察，因而遭到逮捕。这次警察威胁要搞死他。几天后，还是在一月份，一辆遮着牌照的汽车，后面跟着一辆同样遮着牌照的军车，企图碾压他。</p>
-<p>作为回应，高先生组织了接力绝食。律师和维权人士轮流禁食一、二天，以此抗议政府的迫害。当局逮捕了他的律师事务所工作人员。高先生则是保持律师事务所开门，尽管他被取消了律师资格。但从二月中旬开始，他不得不在没有工作人员的情况下继续工作。</p>
-<p>2006年3月，第一批关于活摘法轮功修炼者器官的报道公开后，这些报导促使了我们自己进行调查，高先生的声音就没有停止过。他发表文章谴责（中共当局的）这种做法。他表示愿意加入授权我们开展工作的“调查迫害法轮功联盟”。</p>
+<p>2006年1月，在他发现警察拍摄他之后，他也拍摄了警察，因而遭到逮捕。这次警察威胁要搞死他。几天后，还是在1月份，一辆遮着牌照的汽车，后面跟着一辆同样遮着牌照的军车，企图碾压他。</p>
+<p>作为回应，高先生组织了接力绝食。律师和维权人士轮流禁食一、二天，以此抗议政府的迫害。当局逮捕了他的律师事务所工作人员。高先生则是保持律师事务所开门，尽管他被取消了律师资格。但从2月中旬开始，他不得不在没有工作人员的情况下继续工作。</p>
+<p>2006年3月，第一批关于活摘法轮功修炼者器官的报导公开后，这些报导促使了我们自己进行调查，高先生的声音就没有停止过。他发表文章谴责（中共当局的）这种做法。他表示愿意加入授权我们开展工作的“法轮功受迫害真相联合调查团”。</p>
 <p>随后，高先生邀请大卫?乔高和我去中国开展我们的调查。这本身就是一种勇敢的行为。但邀请的方式却更加大胆。</p>
 <p>我一开始就说过，我从未与高先生直接交流过，但高先生邀请了我们去中国，这两种说法看似矛盾，但都是真的。</p>
 <p>他在邀请信中写道：</p>
@@ -46,46 +46,46 @@
 <p>确实我们是经由媒体才收到邀请函的。高先生给记者打电话向我们发出了邀请。接着记者打电话给我们的翻译转达了他的邀请。随后，记者给她所在的《大纪元时报》发稿，并在2006年6月11日的版面上刊登了邀请函。</p>
 <p>我必须承认，我对高先生这样做感到不安，以这种方式邀请我们，是把他自己置于危险之中。他在（邀请）信中预见到并回答了我的担忧：</p>
 <p>“你可能担心我对你的支持和邀请会危及到我。但我面临的危险不是因为我对你们的支持和邀请，而是因为我们面对的是一个邪恶的独裁体制。因此，危险已经存在。危险的根源在于这个邪恶的、非人性的制度，而不在于我们选择做什么。”</p>
-<p>我们的报告的第一版于2006年7月6日公布，结论是上述那些指控是真实的，大规模地摘取法轮功修炼者的器官的情况确实存在，他们并因此被杀害。在第一版报告中，我们尽了最大努力保护高先生，没有提到他和他的邀请，也没有提到他反对迫害法轮功的公开信。尽管如此，我们非常感谢他，不仅因为他的示范作用，也因为他的分析和见解。</p>
+<p>我们的报告的第一版于2006年7月6日公布，结论是上述那些指控是真实的，大规模地活摘法轮功修炼者的器官的情况确实存在，他们并因此被杀害。在第一版报告中，我们尽了最大努力保护高先生，没有提到他和他的邀请，也没有提到他反对迫害法轮功的公开信。尽管如此，我们非常感谢他，不仅因为他的示范作用，也因为他的分析和见解。</p>
 <p>在高先生几乎立即被捕并遭受酷刑、定罪和判刑时，我们感到震惊。但是，基于我们对中共的了解，我们一点也不感到惊讶。</p>
 <p>高先生的惊人之处，不在于他令人钦佩地为了正义和法治挺身而出，也不在于他因此受到极其残酷的迫害。而是，在迫害加重而愈演愈烈的时候，他坚持自己的立场。他清楚地知道，他所做的一切将会为他带来灾难；但他还是要做。</p>
-<p>正是因为这一点，大卫?乔高和我决定提名高先生为诺贝尔和平奖候选人。今年一月底，我们向挪威诺贝尔委员会发出了提名信。</p>
+<p>正是因为这一点，大卫?乔高和我决定提名高先生为诺贝尔和平奖候选人。今年1月底，我们向挪威诺贝尔委员会发出了提名信。</p>
 <p>我个人赞成给高智晟颁发这个奖项（译者注：即勇敢倡议者奖），从某些方面看，这是比诺贝尔和平奖更大的荣誉。我很清楚，他是五十年来第三位获此殊荣的人，也是第一位唯一的得奖者。而且，他完完全全地符合有关勇敢倡议者的说明中的所有条件。</p>
 <p>我们都希望永远不要再出现高智晟所遇到的那样的情况。但我们也必须希望，如果我们遇到了，我们会像他一样去做。高智晟，我们向你致敬。</p>
 <p>大卫?麦塔斯是加拿大曼尼托巴省温尼伯市的律师。</p>
-<p>注：（1）https://medium.com/@DavidMatasLawyer/honouring-gao-zhisheng-9bdfae85664</p>
-<p>责任编辑：高义</p>
+<p>注1：<ahref="https://medium.com/@DavidMatasLawyer/honouring-gao-zhisheng-9bdfae85664">https://medium.com/@DavidMatasLawyer/honouring-gao-zhisheng-9bdfae85664</a></p>
+<p>责任编辑：高义#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/11/12/n8488039.md#1">大卫?麦塔斯：掩盖使犯罪变得更恶劣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/11/22/n8517224.md#1">加拿大律师促澳洲立法阻中共活摘器官恶行</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053391.md#1">【专访】陈光诚：中国人都应该声援高智晟</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053582.md#1">高智晟失踪6年 耿和向习要人 逾60团体声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/11/12/n8488039.md#1">大卫?麦塔斯：掩盖使犯罪变得更恶劣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/11/22/n8517224.md#1">加拿大律师促澳洲立法阻中共活摘器官恶行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/14/n14053391.md#1">【专访】陈光诚：中国人都应该声援高智晟</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/14/n14053582.md#1">高智晟失踪6年 耿和向习要人 逾60团体声援</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/11/26/n9894907.md#1" target="_blank">毛时代的诗坛乱象</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/12/9/5/n3676026.md#1" target="_blank">老警察讲的笑话让人想哭</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/30/n10600549.md#1" target="_blank">文革中自杀的中共省委书记阎红彦</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/2/n11295577.md#1" target="_blank">西方法轮功学员忆师父欧洲传法 谈修炼故事</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/14/n14225522.md#1">“功成画麟阁” 古代皇帝为功臣画像的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14221459.md#1">康熙皇帝和《红楼梦》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/15/n14226365.md#1">【未解之谜】三体迷思（上）：是什么让顶尖科学家们生无可恋？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/23/n14187753.md#1">【古韵流芳】共饮长江水的相思情意</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/18/n14228140.md#1">谷雨节气到：赏花王 饮香茶王 食谷雨汤补肝明目养生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/21/n14230224.md#1">【新闻五人行】伊以冲突 中共怕了 曝4大顾忌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/21/n14230218.md#1">【菁英论坛】强制消费来临 13亿人买不起帐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/6/n13626750.md#1">【神韵原创音乐】2019 神韵交响乐《扇子舞》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/19/n14229535.md#1">千载难逢 今年肉眼可见恒星爆发</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/20/n14229958.md#1">雷雨轰炸全台！台湾各地未来一周下雨状况一览</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/20/n14229746.md#1">中国富豪覃辉5月9日将被逐出美国 不回中国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/20/n14230112.md#1">大五毛司马南主演新片翻车 首日票房仅50万元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/19/n14229622.md#1">吴亦凡入狱三年 突然冲上热搜与钱有关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/19/n14229599.md#1">《美国偶像》歌手曼迪莎家中骤逝 享年47岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/19/n14229528.md#1">宫崎骏获选《时代杂志》年度百大影响力人物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/19/n14229440.md#1">《帝国浩劫：美国内战》5张AI海报引起轩然大波</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/20/n14229937.md#1">专家：在花园里种5种植物 老鼠会逃之夭夭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/16/n14227098.md#1">50岁以下肠癌发病率上升 这种合成补充剂是祸首</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/8/n14221069.md#1">木瓜改善肠道健康还能抗癌 但要避免买这种木瓜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/22/n14231352.md#1">专家：很多人泡茶少一个步骤 味道变差</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/18/n14228792.md#1">“帝王菜”一把春菊 护本固元 清心安神</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307633.md#1">【新闻五人行】官员玩“掼蛋” 中南海也怕？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307724.md#1">【未解之谜】神农架野人之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307546.md#1">【中国禁闻】中国爆盗卖遗体黑色产业链</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/22/n14231453.htm">大卫?麦塔斯：赞赏、表彰高智晟</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/19920513/djy/blob/master/gb/24/4/22/n14231453.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/22/n14231453.htm">大卫?麦塔斯：赞赏、表彰高智晟</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/4/22/n14231453.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
