--- a/gb/24/8/8/n14307275.md
+++ b/gb/24/8/8/n14307275.md
@@ -123,7 +123,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306142.md#1">奥运第11日：美国队以2金优势 领跑金牌榜</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/11/n11180153.md#1" target="_blank">【征文】章阁：中国古代专制吗（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/17/n11800547.md#1" target="_blank">新年集体炼功交流 法轮功修炼者遍及俄罗斯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/1/n11760806.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（3）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/1/n11424188.md#1" target="_blank">前加拿大世姐：我是如何改变对法轮功看法</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
